--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "husky": "^4.2.5",
     "jest": "^25.1.0",
     "lint-staged": "^10.2.2",
+    "mongodb-memory-server": "^6.9.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
