--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: Testing
+name: TestAndDeploy
 
 on:
   push:
@@ -22,6 +22,23 @@ jobs:
           npm test
           npm run test:e2e
           npm run test:cov
+
+      - name: deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          port: ${{ secrets.DEPLOY_PORT }}
+          script: |
+            whoami
+            cd ${{ secrets.DEPLOY_TARGET }}
+            git pull
+            npm ci --silent
+            npm run build
+            pm2 stop "colonie"
+            pm2 start npm --name "colonie" -- start
+
     services:
       mongodb:
         image: mongo:3.4.23
