--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
-name: TestAndDeploy
+name: Test
 
 on:
-  push:
+  pull_request:
     branches: [master]
 
 jobs:
@@ -20,22 +20,6 @@ jobs:
           npm test
           npm run test:e2e
           npm run test:cov
-
-      - name: deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
-          port: ${{ secrets.DEPLOY_PORT }}
-          script: |
-            whoami
-            cd ${{ secrets.DEPLOY_TARGET }}
-            git pull
-            npm ci --silent
-            npm run build
-            pm2 stop "colonie"
-            pm2 start npm --name "colonie" -- start
 
     services:
       mongodb:
