[feature] pvp raids (#115)
* implement the raiding logic close #85

* add coverall to github test

* add coverall badge

* add pvp information in the README.md

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,11 @@ jobs:
           npm run test:e2e
           npm run test:cov
 
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
     services:
       mongodb:
         image: mongo:3.4.23
