--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mongoose": "5.10.14",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "6.6.3"
+    "rxjs": "6.6.3",
+    "sinon": "^9.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.2",
