--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "7.0.2",
     "@nestjs/platform-express": "7.5.2",
     "@nestjs/schedule": "0.4.1",
+    "dblapi.js": "^2.4.1",
     "discord.js": "12.4.1",
     "dotenv": "8.2.0",
     "migrate": "1.7.0",
