build: add commit-lint hook

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "sinon": "9.2.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@nestjs/cli": "7.6.0",
     "@nestjs/schematics": "7.3.1",
     "@nestjs/testing": "7.6.15",
