--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "migrate:create": "migrate create --template-file ./src/migration-helpers/template.ts --migrations-dir=\"./src/migrations\" --compiler=\"ts:./src/migration-helpers/ts-compiler.js\"",
     "migrate:up": "migrate --migrations-dir=\"./src/migrations\" --compiler=\"ts:./src/migration-helpers/ts-compiler.js\" up",
     "migrate:down": "migrate --migrations-dir=\"./src/migrations\" --compiler=\"ts:./src/migration-helpers/ts-compiler.js\" down",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "standard-version"
   },
   "dependencies": {
     "@nestjs/common": "7.6.15",
@@ -43,8 +44,8 @@
     "sinon": "9.2.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/cli": "12.1.1",
+    "@commitlint/config-conventional": "12.1.1",
     "@nestjs/cli": "7.6.0",
     "@nestjs/schematics": "7.3.1",
     "@nestjs/testing": "7.6.15",
@@ -63,6 +64,7 @@
     "lint-staged": "10.5.4",
     "mongodb-memory-server": "6.9.6",
     "prettier": "2.2.1",
+    "standard-version": "9.3.0",
     "supertest": "6.1.3",
     "ts-jest": "26.5.6",
     "ts-loader": "8.2.0",
